feat: create CRUD of usage vehicles with documentation, unit tests and validator
