# src/server.ts
@@ -7,6 +7,7 @@ import { PostgresDataSource } from "./config/data-source";
 import logger from "./middlewares/logger";
 import carRouters from "./controllers/car";
 import driverRouters from "./controllers/driver";
+import usageRouters from "./controllers/usage";
 import errorHandler from "./middlewares/errorHandler";
 
 PostgresDataSource.initialize()
@@ -21,8 +22,11 @@ const app = express();
 app.use(cors());
 app.use(express.json());
 app.use(logger);
+
 app.use("/cars", carRouters);
 app.use("/drivers", driverRouters);
+app.use("/usage", usageRouters);
+
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use(errorHandler);
 
